<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
      name="viewModel"
      type="org.oppia.android.app.topic.TopicViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/topic_app_bar_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
      app:layout_constraintBottom_toTopOf="@+id/topic_tabs_viewpager_container"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <androidx.appcompat.widget.Toolbar
        android:id="@+id/topic_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:fontFamily="sans-serif"
        android:minHeight="?attr/actionBarSize"
        app:navigationContentDescription="@string/navigate_up"
        app:navigationIcon="?attr/homeAsUpIndicator">

        <TextView
          android:id="@+id/topic_toolbar_title"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="20dp"
          android:ellipsize="marquee"
          android:fadingEdge="horizontal"
          android:fadingEdgeLength="20dp"
          android:focusable="false"
          android:focusableInTouchMode="true"
          android:fontFamily="sans-serif"
          android:marqueeRepeatLimit="1"
          android:requiresFadingEdge="horizontal"
          android:scrollHorizontally="true"
          android:singleLine="true"
          android:text="@{String.format(@string/topic_name, viewModel.topicNameLiveData)}"
          android:textColor="@color/white"
          android:textSize="20sp" />
      </androidx.appcompat.widget.Toolbar>

      <com.google.android.material.tabs.TabLayout
        android:id="@+id/topic_tabs_container"
        style="@style/AppTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="parent"
        app:tabBackground="@color/oppiaPrimaryDark"
        app:tabGravity="fill"
        app:tabIconTint="@color/tab_icon_color_selector"
        app:tabIndicatorColor="@android:color/white"
        app:tabIndicatorHeight="2dp"
        app:tabMode="fixed"
        app:tabTextAppearance="@style/AppTabTextAppearance"
        app:tabTextColor="@color/tab_icon_color_selector" />
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
      android:id="@+id/topic_tabs_viewpager_container"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/topic_app_bar_layout">

      <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/topic_tabs_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

      <View
        android:id="@+id/topic_shadow_view"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@drawable/toolbar_drop_shadow" />
    </FrameLayout>
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
