...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lesson_thumbnail">

        <TextView
          android:id="@+id/story_name_text_view"
          style="@style/Body"
          android:layout_width="match_parent"
          android:layout_marginStart="8dp"
          android:layout_marginTop="8dp"
          android:layout_marginEnd="8dp"
          android:ellipsize="end"
...
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <TextView
          android:id="@+id/topic_name_text_view"
          style="@style/Caption"
          android:layout_width="match_parent"
          android:layout_marginStart="8dp"
          android:layout_marginTop="4dp"
          android:layout_marginEnd="8dp"
          android:layout_marginBottom="12dp"
...
